Split camera capture, encode and client workflows.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,10 @@
 AM_CPPFLAGS = -I..
-bin_PROGRAMS = ch-storage-client
+bin_PROGRAMS = ch-storage-client ch-camera-capture ch-camera-encode
 ch_storage_client_SOURCES =  \
 						main.cpp \
 						storage-client.cpp config.cpp
+						
+ch_camera_capture_SOURCES = config.cpp camera-capture.cpp
+
+ch_camera_encode_SOURCES = config.cpp camera-encode.cpp
 
