--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,16 @@ steps:
   displayName: 'glog'
 - bash: |
     cd deps &&
+    git clone https://github.com/gperftools/gperftools.git && 
+    cd gperftools && git checkout gperftools-2.7 &&
+    (./autogen.sh || ./autogen.sh) &&
+    ./configure && 
+    make -j8 && 
+    sudo make -j8 install && 
+    cd ..
+  displayName: 'gperftools'
+- bash: |
+    cd deps &&
     git clone https://github.com/corehacker/ch-cpp-utils.git && 
     cd ch-cpp-utils && 
     ./autogen.sh && 
